--- a/style.css
+++ b/style.css
@@ -9,6 +9,24 @@ body {
     /* background-size: cover; */
     /* height: 100vh; */
 }
+
+.container {
+    width: 100%;
+    height: auto;
+    margin-top: 30px;
+
+    /* add flexbox style */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
+}
+
+.box{
+    width: 20%;
+
+}
+
 .container-fluid {
     margin: auto;
     max-width: 100%;
@@ -122,6 +140,32 @@ body {
     margin-left: auto; */
 }
 
+.container-article {
+    margin: 25px;
+}
+
+.row{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.row-service {
+    width: 100%;
+    display: contents;
+}
+
+.box-2{
+    /* position: relative; */
+    /* flex: 1; */
+    max-width: 100%;
+    height: 100%;
+    margin: 10px;
+    /* border-radius: 5px; */
+    /* box-shadow: 0 0 5px rgba(0,0,0, 0.2); */
+}
+
 .row-content{
     display: flex;
     flex-wrap: wrap;
@@ -137,7 +181,7 @@ body {
 .img-profile{
     border: #090979;
     width: 22%;
-    height: 361px;
+    height: 525px;
     border-radius: 20%;
     background-color: #090979;
     margin: auto;
@@ -148,7 +192,7 @@ body {
     margin-top: 4rem;
     background-image: url('assets/image/bg-header.png');
     background-repeat: no-repeat;
-    padding: 12rem 5rem;
+    padding: 12rem 0rem;
     background-color: #FAFAFB;
 }
 
@@ -165,19 +209,14 @@ body {
 }
 
 .images-porfolio {
-    position: relative;
-    bottom: 109px;
     width: 100%;
     border-radius: 0px 0px 58px 59px;
     right: 1px;
 }
 
 .timeline {
-    max-width: 100%;
-    max-height: 100%;
     overflow: hidden;
     margin: 30px auto 0;
-    /* box-shadow: 0 0 40px #a0a0a0; */
     font-family: 'Roboto Serif', serif;
 }
 
@@ -206,88 +245,6 @@ body {
     margin-top: 2px;
 }
 
-.body-experience {
-    display: flex;
-    background: #ffffff;
-}
-
-.body-experience ul {
-    padding: 1em 0 0 2em;
-    margin: 0;
-    list-style: none;
-    position: relative;
-    left: 47%;
-}
-
-.body-experience ul::before {
-    content: " ";
-    height: 100%;
-    background-color: #88888ee6;
-    width: 5px;
-    position: absolute;
-    top: 0;
-    left: 2.4em;
-    /* z-index: -1; */
-}
-
-.body-experience li div {
-    display: inline-block;
-    margin: 1em 0;
-    vertical-align: top;
-}
-
-
-.body-experience .point {
-    width: 1.1rem;
-    height: 1rem;
-    box-sizing: border-box;
-    border-radius: 50%;
-    background-color: #fff;
-    z-index: 1;
-    margin-right: 1rem;
-    margin-top: 7%;
-}
-
-.body-experience .point.pink {
-    position:absolute;
-    background-color: hotpink;
-    border: 3px solid #f93b;
-}
-
-.body-experience .point.green {
-    position:absolute;
-    background-color: lightseagreen;
-    border: 3px solid #b0e8e2;
-}
-
-.body-experience .point.orange {
-    position:absolute;
-    background-color: salmon;
-    border: 3px solid #eb8b6e;
-}
-
-.body-experience .point.blue {
-    position:absolute;
-    background-color: aquamarine;
-    border: 3px solid cadetblue;
-}
-
-.body-experience .date {
-    width: 5%;
-    font-size: 0.75em;
-    padding-top: 0.4em;
-    padding-right: 2em;
-}
-
-.body-experience .desc {
-    width: 50%;
-}
-
-.body-experience h3 {
-    font-size: 0.9em;
-    font-weight: 400;
-    margin: 0;
-}
 
 .body h4 {
     margin: 0;
@@ -339,7 +296,165 @@ body {
     left: 20px
 }
 
+.wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+}
+
+.wrapper >*{
+    padding: 10px;
+    margin: 10px;
+    /* flex: 1 100%; */
+
+}
+
+/* container */
+.responsive-two-columns {
+    display:-webkit-box;
+}
+
+/* columns */
+.responsive-two-columns > * {
+    width:100%;
+    padding:1rem;
+}
+
+.main {
+    text-align: left;
+    background: deepskyblue;
+    height: 350px;
+    font-size: 25px;
+}
+
+.aside1 {
+    background: gold;
+}
+
+.aside2 {
+    background: hotpink;
+}
+
+.title-center{
+    justify-content: center;
+}
+
+.form-control {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #d2d6d8;
+    border-radius: 12px;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+.description {
+    width: 100%;
+    padding: 10px 0px;
+    height: 70px;
+    border: 1px solid #d2d6d8;
+    border-radius: 12px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.btn-send {
+    width: 50%;
+    margin-top: 20px;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 9px;
+    height: 60px;
+    background: #0D6EFD;
+    border: 1px solid #0D6EFD;
+    color: #FFF;
+    font-size: 19px;
+    font-family: Roboto Serif, serif;
+}
+
 /* responsive */
+
+@media (min-width:768px) {
+    .responsive-two-columns > * {
+        width:50%;
+    }
+}
+
+@media screen and (max-width: 1200px) { 
+    .box {
+        width: 40%;
+    }
+}
+
+@media all and (min-width: 800px){
+    .main {
+        flex: 3;
+    }
+
+    .aside1 {
+        order: 1;
+    }
+
+    .aside2 {
+        order: 2;
+    }
+    
+    .main {
+        order: 2;
+    }
+
+}
+
+@media all and (max-width: 600px){
+    .box {
+        /* width: 90%; */
+        width: 70%;
+    }
+   
+    .aside {
+        flex: 1;
+    }
+
+    #home {
+        margin-bottom: 0px;
+        margin-top: 0px;
+        padding: 0px;
+    }
+    
+
+    .text-art {
+        padding: 54px;
+    }
+
+    .title-1 {
+        font-size: 30px;
+    }
+    
+    .title-2 {
+        font-size: 32px;
+    }
+    
+    .title-3 {
+        font-size: 20px;
+    }
+
+    .images-porfolio {
+        position: unset;
+        width: 99%;
+    
+    }
+
+    .img-profile {
+        height: 338px;
+    }
+
+    .maps {
+        border: 0;
+        width: 100%;
+        height: 276px;
+        margin-bottom: 30px;
+    }
+}
 
 @media (max-width: 650px){
 
@@ -347,7 +462,7 @@ body {
         flex: 100%;
     }
     .container-header {
-        padding: 0 20px;
+        padding: 0 40px;
     }
 
     .menu-toggle {
@@ -399,27 +514,8 @@ body {
         font-family: 'Roboto Serif', serif;
     }
 
-    /* .container-contact .row-contact {
-        display: flex !important;
-        box-sizing: border-box !important;
-    }
-
-    .alamat { 
-        flex: 50% !important;
-    }
-
-    .group-input {
-        flex: 50% !important;
-    } */
-
-    /* .form-control {
-        height: 30px;
-        border-radius: 15px;
-        border: 1px solid aquamarine;
-    } */
-
     #fullname {
-        width: 400px;
+        width: 275px;
         height: 40px;
         border: 1px solid #d2d6d8;
         border-radius: 12px;
