--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     flex-flow: wrap;
 }
 
+article {
+    width: 80%;
+}
+
 .box{
     width: 20%;
 
@@ -33,7 +37,7 @@ body {
     /* background-color: #f6f6f6; */
 }
 
-.container-header {
+header {
     position: fixed;
     background: #ffffff;
     top: 0;
@@ -47,7 +51,7 @@ body {
    
 }
 
-.container-header .logo {
+header .logo {
     /* color: rgb(83, 83, 83); */
     height: 60px;
     line-height: 60px;
@@ -63,11 +67,11 @@ body {
 
 
 
-.container-header nav {
+header nav {
     margin-left: auto;
 }
 
-.container-header nav ul {
+header nav ul {
     /* margin: 0; */
     /* padding: 0; */
     display:flex;
@@ -78,12 +82,12 @@ body {
     bottom: 20px;
 }
 
-.container-header nav ul li {
+header nav ul li {
     list-style: none;
     box-sizing: border-box;
 }
 
-.container-header nav ul li a {
+header nav ul li a {
     color: rgb(83, 83, 83);
     height: 60px;
     line-height: 60px;
@@ -92,8 +96,8 @@ body {
     display: block;
 }
 
-.container-header nav ul li a:hover,
-.container-header nav ul li a.active{
+header nav ul li a:hover,
+header nav ul li a.active{
     /* color: #ffffff; */
     /* background-color: #aaaaaa; */
     border: 3px solid rgb(20,15,105);
@@ -141,7 +145,8 @@ body {
 }
 
 .container-article {
-    margin: 25px;
+    width: 100%;
+    padding: 1rem 15rem;
 }
 
 .row{
@@ -311,7 +316,7 @@ body {
 
 /* container */
 .responsive-two-columns {
-    display:-webkit-box;
+    display:flex;
 }
 
 /* columns */
@@ -375,6 +380,10 @@ body {
 /* responsive */
 
 @media (min-width:768px) {
+    .responsive-two-columns {
+        display:content;   
+    }
+
     .responsive-two-columns > * {
         width:50%;
     }
@@ -406,6 +415,13 @@ body {
 }
 
 @media all and (max-width: 600px){
+
+    .container-article {
+        padding: 0px;
+    }
+    .responsive-two-columns {
+        display:contents;   
+    }
     .box {
         /* width: 90%; */
         width: 70%;
@@ -461,7 +477,7 @@ body {
     .flex-item-right, .flex-item-left {
         flex: 100%;
     }
-    .container-header {
+    header {
         padding: 0 40px;
     }
 
@@ -469,7 +485,7 @@ body {
         display: block;
     }
 
-    .container-header nav {
+    header nav {
         position: absolute;
         width: 100%;
         height: calc(100vh - 50px);
@@ -480,16 +496,16 @@ body {
         margin-left: auto;
     }
 
-    .container-header nav.active {
+    header nav.active {
         left: 0;
     }
 
-    .container-header nav ul {
+    header nav ul {
         display: block;
         text-align: left;
     }
 
-    .container-header nav ul li a {
+    header nav ul li a {
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
         color: rgb(255, 255, 255);
         border: 0px !important;
@@ -498,8 +514,8 @@ body {
         border-left: 0px;
     }
 
-    .container-header nav ul li a:hover,
-    .container-header nav ul li a.active{
+    header nav ul li a:hover,
+    header nav ul li a.active{
         color: #ffffff;
         background-color: #aaaaaa;
     }
